--- a/styles/molecules/index.css
+++ b/styles/molecules/index.css
@@ -1,4 +1,5 @@
 @import "./card.css";
+@import "./ad-card.css";
 @import "./button-group.css";
 @import "./input-field.css";
 @import "./badge-group.css";
