--- a/styles/components/marketplace/shopping_cart.css
+++ b/styles/components/marketplace/shopping_cart.css
@@ -1,4 +1,3 @@
 .shopping-cart {
-    @apply grid gap-4 items-start;
-    @apply grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4;
+    @apply card-grid;
 }
